00-fillthefridgeright/00a-base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packoftomatoes
  labels:
    app: packoftomatoes
    app.kubernetes.io/part-of: myfridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: packoftomatoes
  template:
    metadata:
      labels:
        app: packoftomatoes
    spec:
      containers:
      - name: packoftomatoes
        image: quay.io/mdargatz/thegitopsfridge:v1
        ports:
        - containerPort: 8080
