00-fillthefridgeright/00a-base/app-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: butter
  labels:
    app: butter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: butter
  template:
    metadata:
      labels:
        app: butter
    spec:
      containers:
      - name: butter
        image: quay.io/mdargatz/thegitopsfridge:v1
        ports:
        - containerPort: 8080
