00-fillthefridgeright/00a-base/app-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milkcarton
  labels:
    app: milkcarton
    app.kubernetes.io/part-of: myfridge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: milkcarton
  template:
    metadata:
      labels:
        app: milkcarton
    spec:
      containers:
      - name: milkcarton
        image: quay.io/mdargatz/thegitopsfridge:v1
        ports:
        - containerPort: 8080
