00-fillthefridgeright/00a-base/app-deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packofcheese
  labels:
    app: packofcheese
spec:
  replicas: 5
  selector:
    matchLabels:
      app: packofcheese
  template:
    metadata:
      labels:
        app: packofcheese
    spec:
      containers:
      - name: packofcheese
        image: quay.io/mdargatz/thegitopsfridge:v1
        ports:
        - containerPort: 8080
