00-fillthefridgeright/00a-base/app-deployment5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packofeggs
  labels:
    app: packofeggs
    app.kubernetes.io/part-of: myfridge
spec:
  replicas: 5
  selector:
    matchLabels:
      app: packofeggs
  template:
    metadata:
      labels:
        app: packofeggs
    spec:
      containers:
      - name: packofeggs
        image: quay.io/mdargatz/thegitopsfridge:v1
        ports:
        - containerPort: 8080
