00-fillthefridgeright/00a-base/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: thegitopsfridge-app
spec:
  selector:
    app: thegitopsfridge-app
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8080
  type: ClusterIP
