00-fillthefridgeright/00a-base/app-ingress.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: packoftomatoes
  namespace: thegitopsfridge
  labels:
    app: packoftomatoes
spec:
  host: packoftomatoes.apps-crc.testing
  to:
    kind: Service
    name: thegitopsfridge-app
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
